# Homeworld

./: .gitignore  README.md  changelog.md  meson.build
.github/workflows/: main.yml
HomeworldSDL_big/: tweak.script
Linux/: build-run.sh
Linux/stuff/: configure.ac
Mac/: Homeworld_Prefix.h
Mac/Homeworld.xcodeproj/: project.pbxproj
Windows/: Makefile  hw.rc
Windows/cv2pdb/: autoexp.expand  autoexp.visualizer
assets/: meson.build
assets/HomeworldSDL_big/: meson.build
src/Game/: AIFleetMan.c  AIPlayer.c  AIShip.c  AITeam.c  AIUtilities.c  AIVar.c  Animatic.c  BTG.c  BigFile.c  ChannelFSM.c  Clouds.c  Collision.c  CommandLayer.c  Crates.c  ETG.c  FEReg.c  File.c  File.h  Formation.c  GamePick.c  Globals.h  Gun.c  Gun.h  HS.c  HorseRace.c  KASFunc.c  KNITransform.c_ignore  Key.h  Light.c  Makefile.am  Matrix.c  Memory.c  Mesh.c  Mesh.h  MultiplayerGame.c  MultiplayerLANGame.c  NIS.c  Nebulae.c  NetCheck.c  Options.c  (+38 more)
src/Missions/: meson.build
src/Missions/SinglePlayer/: Mission01.kas  Mission02.kas  Mission03.kas  Mission04.kas  Mission05.kas  Mission05_OEM.kas  Mission06.kas  Mission07.kas  Mission08.kas  Mission09.kas  Mission10.kas  Mission11.kas  Mission12.kas  Mission13.kas  Mission14.kas  Mission15.kas  Mission16.kas  meson.build
src/Missions/Tutorials/: Tutorial1.kas  meson.build
src/SDL/: NetworkInterface.c  NetworkInterface.h  Queue.c  Queue.h  TimeoutTimer.c  Titan.c  TitanInterface.h  TitanInterfaceC.c_orig  TitanInterfaceC.h  avi.c  dct.c  font.c  fqcodec.c  fquant.c  glinc.h  main.c  main.h  mainrgn.c  meson.build  mouse.c  prim2d.c  prim2d.h  prim3d.c  regkey.h  render.c  render.h  rinit.c  screenshot.c  screenshot.h  smixer.c  soundlow.c  soundlow.c_orig  soundlow.h  sstream.c  texreg.c  texreg.h  utility.c  utility.h
src/Ships/: CloakGenerator.c  DefenseFighter.c  GravWellGenerator.c  ProximitySensor.c  SalCapCorvette.c
tools/biggie/: biggie-MacOSX-compile.sh
tools/btg/: BTG.dsp  BTG.vcproj  btgGL.cpp  vc71-BTG.vcproj
tools/kas2c/: kas2c-MacOSX-compile.sh  kas2c.c  parser.y
tools/liflist/: liflist.c  liflist.mak
tools/monochrome-btg/: monochrome-btg-MacOSX-compile.sh
tools/x86_64/: Makefile_windows  bank.c  geo.c
wasm/: Makefile  changelog.md  hwfs.html  plug.tga  plugscreens.py
wasm/Plugscreens/: github-orig.plug  github-plug-template.md  github.plug
