subdir('SinglePlayer')
subdir('Tutorials')

src_missions = [src_missions_tutorials, src_missions_single_player]
inc_src_missions = [inc_src_missions_tutorials, inc_src_missions_single_player]

missions = [tutorial_01, mission_01, mission_02, mission_03, mission_04, mission_05,
            mission_05_oem, mission_06, mission_07, mission_08, mission_09, mission_10,
            mission_11, mission_12, mission_13, mission_14, mission_15, mission_16]
